--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
   <!-- Angular -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
+
 
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
@@ -48,30 +51,22 @@
 		<div class="col-xs-8 col-xs-offset-2">
 
 				<h1>{{conts.pageTitle}}</h1>
-				<ul class="list-group">
-					<li ng-repeat="(key,contract) in conts.contracts" class="list-group-item"  >
-						<span ng-click=conts.getContract(contract.$id) data-toggle="modal" data-target="#contractModal">{{contract.metrics.name}}, {{contract.metrics.location}} ({{contract.metrics.dayrate}})</span>
-            <span aria-hidden="true" class="pull-right" ng-click=conts.deleteContract(contract.$id)>&times;</span>
-					</li>
-				</ul>
 
-		</div>
-	</div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-
-    {{conts.contractFields | json}}
-
-      <input type="button" class="btn btn-primary" value="New contract" data-toggle="modal" data-target="#contractModal" ng-click="conts.thisContract = {}">
-    
-    </div>    
+    </div>
   </div>
 </div>
 
-<contract-modal></contract-modal>
+<div class="container" >
+  <div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+
+        <div ui-view></div>
+
+    </div>
+  </div>
+</div>
+
+
 
 <script type="text/javascript">
     $(function () {
