FIx directive template urls for remote server, add mobile viewport tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Contracker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 
   <!-- jQuery -->
   <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
